--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,6 @@
 {
   "cli": {
-    "version": ">= 16.3.3",
-    "appVersionSource": "remote"
+    "version": ">= 5.9.1"
   },
   "build": {
     "development": {
@@ -9,13 +8,15 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {
       "android": {
-        "buildType": "apk"
-      },
-      "autoIncrement": true
+        "buildType": "app-bundle"
+      }
     }
   },
   "submit": {
