--- a/app.json
+++ b/app.json
@@ -51,6 +51,7 @@
       "eas": {
         "projectId": "2c25ec49-da63-46fc-9043-24afd98fbe3f"
       }
-    }
+    },
+    "owner": "shubham_smc"
   }
 }
